Bug fix to make privacy policy links visible.

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -137,16 +137,13 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 	}
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.gdpr-footer {
+    background-color: @color__footer--background;
+    padding: 10px 0;
+    
+    a[class] {
+        padding: 0 10px;
+	    font-family: @font__navigation--font-family;
+    	color: @color__navigation--text;
+    }
+}
